[package]
name = "fadafada"
version = "0.0.1-alpha.1"
authors = ["nolash <dev@holbrook.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.hex]
version = "0.4.3"

[dependencies.yaml-rust]
version = "~0.3.5"
optional = true

[dependencies.log]
version = "~0.4"

[dependencies.env_logger]
version = "~0.9"

[dependencies.url]
version = "~2.2.2"
optional = true

[features]
web2 = []
yaml = ["yaml-rust", "url"]
