[package]
name = "fadfada"
version = "0.0.1-alpha.1"
authors = ["nolash <dev@holbrook.no>"]
edition = "2018"
rust-version = "1.56"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies.hex]
version = "^0.4"

[dependencies.yaml-rust]
version = "^0.3.5"
optional = true

[dependencies.log]
version = "^0.4"

[dependencies.env_logger]
version = "^0.9"

[dependencies.url]
version = "^2.2"

[dependencies.sha2]
version = "^0.10"
optional = true

[features]
web2 = ["sha2"]
yaml = ["yaml-rust"]
